add coauthors and fix bibliography

--- a/ref3.bib
+++ b/ref3.bib
@@ -13,6 +13,22 @@
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Bottini05,
+   author = {{Bottini}, D. and {Garilli}, B. and {Maccagni}, D. and {Tresse}, L. and 
+	{Le Brun}, V. and {Le F{\`e}vre}, O. and {Picat}, J.~P. and 
+	{Scaramella}, R. and {Scodeggio}, M. and {Vettolani}},
+    title = "{The Very Large Telescope Visible Multi-Object Spectrograph Mask Preparation Software}",
+  journal = {\pasp},
+ keywords = {Instrumentation: Spectrographs, Methods: Numerical, Techniques: Spectroscopic},
+     year = 2005,
+    month = sep,
+   volume = 117,
+    pages = {996-1103},
+      doi = {10.1086/432150},
+   adsurl = {http://adsabs.harvard.edu/abs/2005PASP..117..996B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{Paolillo02,
    author = {{Paolillo}, M. and {Fabbiano}, G. and {Peres}, G. and {Kim}, D.-W},
     title = "{Deep ROSAT HRI Observations of the NGC 1399/NGC 1404 Region: Morphology and Structure of the X-Ray Halo}",
@@ -62,6 +78,24 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{arnaboldi12,
+   author = {{Arnaboldi}, M. and {Ventimiglia}, G. and {Iodice}, E. and {Gerhard}, O. and 
+	{Coccato}, L.},
+    title = "{A tale of two tails and an off-centered envelope: diffuse light around the cD galaxy NGC 3311 in the Hydra I cluster}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1205.5289},
+ keywords = {galaxies: clusters: general, galaxies: clusters: individual: Hydra I, galaxies: kinematics and dynamics, galaxies: individual: NGC 3311},
+     year = 2012,
+    month = sep,
+   volume = 545,
+      eid = {A37},
+    pages = {A37},
+      doi = {10.1051/0004-6361/201116752},
+   adsurl = {http://adsabs.harvard.edu/abs/2012A%26A...545A..37A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @ARTICLE{Arnaboldi04,
    author = {{Arnaboldi}, M. and {Gerhard}, O. and {Aguerri}, J.~A.~L. and 
@@ -79,6 +113,24 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2004ApJ...614L..33A},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+
+@ARTICLE{murante07,
+   author = {{Murante}, G. and {Giovalli}, M. and {Gerhard}, O. and {Arnaboldi}, M. and 
+	{Borgani}, S. and {Dolag}, K.},
+    title = "{The importance of mergers for the origin of intracluster stars in cosmological simulations of galaxy clusters}",
+  journal = {\mnras},
+   eprint = {astro-ph/0701925},
+ keywords = {galaxies: clusters: general, galaxies: elliptical and lenticular, cD, galaxies: evolution},
+     year = 2007,
+    month = may,
+   volume = 377,
+    pages = {2-16},
+      doi = {10.1111/j.1365-2966.2007.11568.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2007MNRAS.377....2M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @ARTICLE{Cantiello15,
    author = {{Cantiello}, M. and {Capaccioli}, M. and {Napolitano}, N. and 
@@ -102,6 +154,23 @@ archivePrefix = "arXiv",
 }
 
 
+@ARTICLE{bullock05,
+   author = {{Bullock}, J.~S. and {Johnston}, K.~V.},
+    title = "{Tracing Galaxy Formation with Stellar Halos. I. Methods}",
+  journal = {\apj},
+   eprint = {astro-ph/0506467},
+ keywords = {Cosmology: Dark Matter, Galaxies: Dwarf, Galaxies: Evolution, Galaxies: Formation, Galaxies: Halos, Galaxies: Kinematics and Dynamics, Galaxy: Evolution, Galaxy: Formation, Galaxy: Halo, Galaxy: Kinematics and Dynamics, Galaxies: Local Group},
+     year = 2005,
+    month = dec,
+   volume = 635,
+    pages = {931-949},
+      doi = {10.1086/497422},
+   adsurl = {http://adsabs.harvard.edu/abs/2005ApJ...635..931B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 
 @ARTICLE{Voggel16,
    author = {{Voggel}, K. and {Hilker}, M. and {Richtler}, T.},
@@ -117,6 +186,22 @@ archivePrefix = "arXiv",
     pages = {A102},
       doi = {10.1051/0004-6361/201527070},
    adsurl = {http://adsabs.harvard.edu/abs/2016A%26A...586A.102V},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{rudick06,
+   author = {{Rudick}, C.~S. and {Mihos}, J.~C. and {McBride}, C.},
+    title = "{The Formation and Evolution of Intracluster Light}",
+  journal = {\apj},
+   eprint = {astro-ph/0605603},
+ keywords = {Galaxies: Clusters: General, Galaxies: Evolution, Galaxies: Interactions, Galaxies: Kinematics and Dynamics, Methods: n-Body Simulations},
+     year = 2006,
+    month = sep,
+   volume = 648,
+    pages = {936-946},
+      doi = {10.1086/506176},
+   adsurl = {http://adsabs.harvard.edu/abs/2006ApJ...648..936R},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -3188,6 +3273,70 @@ archivePrefix = "arXiv",
     pages = {4},
       doi = {10.1088/0067-0049/210/1/4},
    adsurl = {http://adsabs.harvard.edu/abs/2014ApJS..210....4M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Grillmair94,
+   author = {{Grillmair}, C.~J. and {Freeman}, K.~C. and {Bicknell}, G.~V. and 
+	{Carter}, D. and {Couch}, W.~J. and {Sommer-Larsen}, J. and 
+	{Taylor}, K.},
+    title = "{The velocity dispersion of globular clusters in NGC 1399}",
+  journal = {\apjl},
+ keywords = {Elliptical Galaxies, Galactic Rotation, Galaxies, Spectroscopy, Star Clusters, Stellar Luminosity, Velocity Distribution, Brightness Distribution, Hubble Space Telescope, Kinematics, Mass To Light Ratios, Photometry},
+     year = 1994,
+    month = feb,
+   volume = 422,
+    pages = {L9-L12},
+      doi = {10.1086/187199},
+   adsurl = {http://adsabs.harvard.edu/abs/1994ApJ...422L...9G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Scharf05,
+   author = {{Scharf}, C.~A. and {Zurek}, D.~R. and {Bureau}, M.},
+    title = "{The Chandra Fornax Survey. I. The Cluster Environment}",
+  journal = {\apj},
+   eprint = {astro-ph/0406216},
+ keywords = {Galaxies: Clusters: Individual: Name: Fornax, Galaxies: Dwarf, Cosmology: Large-Scale Structure of Universe, X-Rays: Galaxies: Clusters},
+     year = 2005,
+    month = nov,
+   volume = 633,
+    pages = {154-164},
+      doi = {10.1086/444531},
+   adsurl = {http://adsabs.harvard.edu/abs/2005ApJ...633..154S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Ferguson89,
+   author = {{Ferguson}, H.~C. and {Sandage}, A.},
+    title = "{The spatial distributions and intrinsic shapes of dwarf elliptical galaxies in the Virgo and Fornax Clusters}",
+  journal = {\apjl},
+ keywords = {Dwarf Galaxies, Elliptical Galaxies, Sky Surveys (Astronomy), Spatial Distribution, Virgo Galactic Cluster, Astronomical Photography, Density Distribution, Galactic Structure, Irregular Galaxies, Luminosity},
+     year = 1989,
+    month = nov,
+   volume = 346,
+    pages = {L53-L56},
+      doi = {10.1086/185577},
+   adsurl = {http://adsabs.harvard.edu/abs/1989ApJ...346L..53F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Jordan07,
+   author = {{Jord{\'a}n}, A. and {Blakeslee}, J.~P. and {C{\^o}t{\'e}}, P. and 
+	{Ferrarese}, L. and {Infante}, L. and {Mei}, S. and {Merritt}, D. and 
+	{Peng}, E.~W. and {Tonry}, J.~L. and {West}, M.~J.},
+    title = "{The ACS Fornax Cluster Survey. I. Introduction to the Survey and Data Reduction Procedures}",
+  journal = {\apjs},
+   eprint = {astro-ph/0702320},
+ keywords = {Galaxies: Clusters: Individual: Name: Fornax, Galaxies: Distances and Redshifts, Galaxies: Elliptical and Lenticular, cD, Galaxies: Nuclei, Galaxies: Star Clusters, Methods: Data Analysis},
+     year = 2007,
+    month = apr,
+   volume = 169,
+    pages = {213-224},
+      doi = {10.1086/512778},
+   adsurl = {http://adsabs.harvard.edu/abs/2007ApJS..169..213J},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -8316,16 +8465,169 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{capaccioli+15,
+   author = {{Capaccioli}, M. and {Spavone}, M. and {Grado}, A. and {Iodice}, E. and 
+	{Limatola}, L. and {Napolitano}, N.~R. and {Cantiello}, M. and 
+	{Paolillo}, M. and {Romanowsky}, A.~J. and {Forbes}, D.~A. and 
+	{Puzia}, T.~H. and {Raimondo}, G. and {Schipani}, P.},
+    title = "{VEGAS: A VST Early-type GAlaxy Survey. I. Presentation, wide-field surface photometry, and substructures in NGC 4472}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1507.01336},
+ keywords = {techniques: image processing, galaxies: elliptical and lenticular, cD, gravitation, galaxies: fundamental parameters, galaxies: formation},
+     year = 2015,
+    month = sep,
+   volume = 581,
+      eid = {A10},
+    pages = {A10},
+      doi = {10.1051/0004-6361/201526252},
+   adsurl = {http://adsabs.harvard.edu/abs/2015A%26A...581A..10C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{schipani+12,
+   author = {{Schipani}, P. and {Capaccioli}, M. and {D'Orsi}, S. and {Marcozzi}, C. and 
+	{Marty}, L. and {De Paris}, G. and {Fierro}, D. and {Arcidiacono}, C. and 
+	{Farinato}, J. and {Magrin}, D. and {Ragazzoni}, R. and {Umbriaco}, G. and 
+	{Brescia}, M. and {Molfese}, C. and {Perrotta}, F. and {Ferragina}, L.
+	},
+    title = "{VST: the telescope progress toward stars }",
+  journal = {Memorie della Societa Astronomica Italiana Supplementi},
+ keywords = {Telescopes, Active Optics},
+     year = 2012,
+   volume = 19,
+    pages = {393},
+   adsurl = {http://adsabs.harvard.edu/abs/2012MSAIS..19..393S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{munoz+15,
+   author = {{Mu{\~n}oz}, R.~P. and {Eigenthaler}, P. and {Puzia}, T.~H. and 
+	{Taylor}, M.~A. and {Ordenes-Brice{\~n}o}, Y. and {Alamo-Mart{\'{\i}}nez}, K. and 
+	{Ribbeck}, K.~X. and {{\'A}ngel}, S. and {Capaccioli}},
+    title = "{Unveiling a Rich System of Faint Dwarf Galaxies in the Next Generation Fornax Survey}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {1510.02475},
+ keywords = {galaxies: clusters: individual: Fornax, galaxies: dwarf, galaxies: elliptical and lenticular, cD},
+     year = 2015,
+    month = nov,
+   volume = 813,
+      eid = {L15},
+    pages = {L15},
+      doi = {10.1088/2041-8205/813/1/L15},
+   adsurl = {http://adsabs.harvard.edu/abs/2015ApJ...813L..15M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 
+@ARTICLE{iodice17,
+   author = {{Iodice}, E. and {Spavone}, M. and {Cantiello}, M. and {D'Abrusco}, R. and 
+	{Capaccioli}, M. and {Hilker}, M. and {Mieske}, S. and {Napolitano}, N.R. and 
+	{Peletier}, R.~F. and {Limatola}, L. and {Grado}, A. and {Venhola}},
+    title = "{Intracluster Patches of Baryons in the Core of the Fornax Cluster}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1711.04681},
+ keywords = {galaxies: clusters: intracluster medium, galaxies: interactions },
+     year = 2017,
+    month = dec,
+   volume = 851,
+      eid = {75},
+    pages = {75},
+      doi = {10.3847/1538-4357/aa9b30},
+   adsurl = {http://adsabs.harvard.edu/abs/2017ApJ...851...75I},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 
+@ARTICLE{venhola+17,
+   author = {{Venhola}, A. and {Peletier}, R. and {Laurikainen}, E. and {Salo}, H. and 
+	{Lisker}, T. and {Iodice}, E. and {Capaccioli}, M. and {Kleijn}, G.~V. and 
+	{Valentijn}, E. and {Mieske}, S. and {Hilker}, M. and {Wittmann}
+	},
+    title = "{The Fornax Deep Survey with VST. III. Low surface brightness dwarfs and ultra diffuse galaxies in the center of the Fornax cluster}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1710.04616},
+ keywords = {galaxies: dwarf, galaxies: photometry, galaxies: evolution, galaxies: clusters: individual: Fornax},
+     year = 2017,
+    month = dec,
+   volume = 608,
+      eid = {A142},
+    pages = {A142},
+      doi = {10.1051/0004-6361/201730696},
+   adsurl = {http://adsabs.harvard.edu/abs/2017A%26A...608A.142V},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 
+@ARTICLE{cantiello+17,
+   author = {{Cantiello}, M. and {D'Abrusco}, R. and {Spavone}, M. and {Paolillo}, M. and 
+	{Capaccioli}, M. and {Limatola}, L. and {Grado}, A. and {Iodice}, E. and 
+	{Raimondo}, G. and {Napolitano}, N. and {Blakeslee}},
+    title = "{VEGAS-SSS II: Comparing the globular cluster systems in NGC3115 and NGC1399 using VEGAS and FDS survey data}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1711.00750},
+ keywords = {Astrophysics - Astrophysics of Galaxies},
+     year = 2017,
+    month = nov,
+   adsurl = {http://adsabs.harvard.edu/abs/2017arXiv171100750C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{mentz+16,
+   author = {{Mentz}, J.~J. and {La Barbera}, F. and {Peletier}, R.~F. and 
+	{Falc{\'o}n-Barroso}, J. and {Lisker}, T. and {van de Ven}, G. and 
+	{Loubser}, S.~I. and {Hilker}, M. and {S{\'a}nchez-Janssen}},
+    title = "{Abundance ratios and IMF slopes in the dwarf elliptical galaxy NGC 1396 with MUSE}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1608.07042},
+ keywords = {galaxies: abundances, galaxies: dwarf, galaxies: evolution, galaxies: individual: (NGC 1396), galaxies: stellar content},
+     year = 2016,
+    month = dec,
+   volume = 463,
+    pages = {2819-2838},
+      doi = {10.1093/mnras/stw2129},
+   adsurl = {http://adsabs.harvard.edu/abs/2016MNRAS.463.2819M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Drinkwater+01,
+   author = {{Drinkwater}, M.~J. and {Gregg}, M.~D. and {Colless}, M.},
+    title = "{Substructure and Dynamics of the Fornax Cluster}",
+  journal = {\apjl},
+   eprint = {astro-ph/0012415},
+ keywords = {Cosmology: Distance Scale, Galaxies: Clusters: General, Galaxies: Clusters: Individual: Name: Fornax},
+     year = 2001,
+    month = feb,
+   volume = 548,
+    pages = {L139-L142},
+      doi = {10.1086/319113},
+   adsurl = {http://adsabs.harvard.edu/abs/2001ApJ...548L.139D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 
-
-
+@ARTICLE{napolitano03,
+   author = {{Napolitano}, N.~R. and {Pannella}, M. and {Arnaboldi}, M. and 
+	{Gerhard}, O. and {Aguerri}, J.~A.~L. and {Freeman}, K.~C. and 
+	{Capaccioli}, M. and {Ghigna}, S. and {Governato}, F. and {Quinn}, T. and 
+	{Stadel}, J.},
+    title = "{Intracluster Stellar Population Properties from N-Body Cosmological Simulations. I. Constraints at z = 0}",
+  journal = {\apj},
+   eprint = {astro-ph/0305216},
+ keywords = {Galaxies: Clusters: General, Methods: n-Body Simulations- ISM: Planetary Nebulae: General, Stellar Dynamics},
+     year = 2003,
+    month = sep,
+   volume = 594,
+    pages = {172-185},
+      doi = {10.1086/376860},
+   adsurl = {http://adsabs.harvard.edu/abs/2003ApJ...594..172N},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 
 
