implement changes after submission warning

--- a/pota.tex
+++ b/pota.tex
@@ -22,36 +22,42 @@ N. R. Napolitano$^{1}$,
 M. Hilker$^{2}$, 
 M. Spavone$^{1}$, 
 C. Schulz$^{2}$,
-M. Cantiello$^{3}$,
+Michele Cantiello$^{3}$,
 \and 
 C. Tortora$^{4}$,
 E. Iodice$^{1}$, 
-M. Paolillo$^{5}$,
+M. Paolillo$^{5,13}$,
 R. D'Abrusco$^{6}$,
 A. J. Romanowsky$^{7}$,
 M. Capaccioli$^{5}$, 
 \and 
-R. Peletier$^{4}$,
+R. F. Peletier$^{4}$,
 G. van de Ven$^{2}$,
 C. Spiniello$^{1}$,
 M. Norris$^{9}$,
 T. Puzia$^{10}$ ,
-\and 
 T. Lisker$^{8}$,
+\and 
 R. Munoz$^{10}$ ,
-P. Schipani$^{1}$
+P. Schipani$^{1}$,
+P. Eigenthaler$^{10,11}$,
+M. A. Taylor$^{12}$,
+R S. Janssen$^X$,
+Y. {\'O}rdenes$^X$
 \\~\\
-$^1$ INAF -- Osservatorio Astronomico di Capodimonte, Salita Moiariello, 16, 
-80131 - Napoli, Italy\\
-$^2$ European Southern Observatory, Karl-Schwarzschild-Strasse 2, D-85748 Garching bei Munchen, Germany\\
-$^3$ INAF -- Astronomical Observatory of Teramo, Via Maggini, 64100, Teramo, Italy\\
-$^4$ Kapteyn Astronomical Institute, University of Groningen, PO Box 72, 9700 AV Groningen, The Netherlands\\
-$^5$ Dipartimento di Fisica Ettore Pancini, Universit\`a di Napoli Federico II,via Cintia, 80126, Italy\\
+$^1$ INAF -- Osservatorio Astronomico di Capodimonte, Salita Moiariello, 16, 80131 - Napoli, Italy\\
+$^2$ European Southern Observatory, Karl-Schwarzschild-Stra{\ss}e 2, 85748 Garching bei Munchen, Germany\\
+$^3$ INAF – Astronomical Observatory of Abruzzo, Via Maggini, 64100, Teramo, Italy\\
+$^4$ Kapteyn Astronomical Institute, University of Groningen, PO Box 800, 9700 AV Groningen, The Netherlands\\
+$^5$ Dipartimento di Fisica Ettore Pancini, Universit\`a di Napoli Federico II,via Cintia, 80126 - Napoli Italy\\
 $^6$ Smithsonian Astrophysical Observatory/Chandra X-ray centre, 02138 Cambridge (MA), US\\
 $^7$ University of California at Santa Cruz, Astronomy and Astrophysics Department, US\\
-$^8$ Astronomisches Rechen-Institut Zentrum fr Astronomie Mnchhofstra§e 12-14 D-69120 Heidelberg, Germany \\
-$^9$ School of Physical Sciences and Computing, Leighton Building, LE114, Lancashire, UK\\
-$^{10}$ Pontificia Universidad Catolica de Chile, Av. Vicuna Mackenna 4860, Santiago, Chile 
+$^8$ Astronomisches Rechen-Institut Zentrum f{\"u}r Astronomie M{\"o}nchhofstra{\ss}e 12-14 69120 Heidelberg, Germany \\
+$^9$ Jeremiah Horrocks Institute, University of Central Lancashire, Preston, PR1 2HE, United Kingdom\\
+$^{10}$ Pontificia Universidad Catolica de Chile, Av. Vicuna Mackenna 4860, Santiago, Chile \\
+$^{11}$ CASSACA, Camino El Observatorio 1515, Las Condes, Santiago, Chile\\
+$^{12}$ Gemini Observatory, Northern Operations Center, 670 North A’ohoku Place, Hilo, HI 96720, USA\\
+$^{13}$ INFN, Sezione di Napoli, via Cintia, 80126, Napoli, Italy
 }
 
 \voffset=-0.6in
@@ -538,7 +544,7 @@ CaT lines only for objects with radial velocities $-500 < v < 3000 \kms$. This
 means that only radial velocities measured to be $-450 < v < 2500 \kms$ are 
 meaningful, whereas velocities outside this range are non-physical, and thus 
 discarded as meaningless. Heliocentric velocity was computed with {\it iraf/rvcorrect} 
-for each slit, and subtracted to all radial velocities. 
+for each slit, and subtracted from all radial velocities. 
 
 \subsection{Disentangling Fornax objects from foreground and background 
 sources}
@@ -1048,9 +1054,35 @@ the outer exponential halo at $R\sim10$ arcmin from \citet{Iodice16} and
 show, from the dynamical point of view, the emergence of an intracluster 
 population of GCs (as well as PNe) in the Fornax Cluster.
 
+\section{Acknowledgments}
+
+NRN and EI acknowledge financial support from the European Union’s Horizon
+2020 research and innovation programme under the Marie Sk\l{}odowska-Curie
+grant agreement No 721463 to the SUNDIAL ITN network and  PRIN INAF 2014 
+``Fornax Cluster Imaging and Spectroscopic Deep Survey''.
+
+CT is supported through an NWO-VICI grant (project number 639.043.308).
+
+CSpiniello has received funding from the European Union's Horizon 2020 
+research and innovation programme under the Marie Sklodowska-Curie 
+actions grant agreement n. 664931.
+
+M.P. acknowledges financial contribution from the agreement ASI-INAF n.2017-14-H.O.
+
+T.L. acknowledges financial support from the European Union's Horizon 2020 
+research and innovation programme under the Marie Sk\l{}odowska-Curie 
+grant agreement No.\ 721463 to the SUNDIAL ITN network.
+
+P.E. acknowledges support from the Chinese Academy of Sciences (CAS) 
+through CAS-CONICYT Postdoctoral  Fellowship CAS150023 administered 
+by the CAS South America Center for Astronomy (CASSACA) in Santiago,  Chile.
+
+MS acknowledge finacial support from the VST project (P.I. P. Schipani).
+
+The authors acknowledge financial support from the European Union’s 
+Horizon 2020 research and innovation programme under Marie Sk\l{}odowska-Curie 
+grant agreement No 721463 to the SUNDIAL ITN network.
 
 \bibliographystyle{mn2e}
 \bibliography{ref3}
-
-
 \end{document}
