implement Spiniello’s feedback

--- a/pota.tex
+++ b/pota.tex
@@ -69,8 +69,8 @@ $^{13}$ INFN, Sezione di Napoli, via Cintia, 80126, Napoli, Italy
 \begin{abstract}
 We present the results of a wide spectroscopic survey aimed at detecting 
 extragalactic globular clusters (GCs) in the core of the Fornax cluster. This 
-program is part of the Fornax Cluster VLT Spectroscopic Survey (FVSS) aimed at 
-gathering kinematical information of stars and compact sources in the Fornax 
+program is part of the Fornax Cluster VLT Spectroscopic Survey (FVSS) whose goal 
+is to gather kinematical information of stars and compact sources in the Fornax 
 Core using different VLT instruments, in synergy with the Fornax Deep Survey 
 carried out at the VLT Survey Telescope (VST). GC candidates were selected in 
 multi-band VST and VISTA images. About 4500 low resolution spectra (from 4800 
@@ -90,11 +90,11 @@ dynamics and kinematics of giant galaxies out to the intracluster regions
 corresponding to about $1/4$ of the cluster virial radius, which will be mapped 
 with unprecedented details. Here we have found that the velocity dipersion of 
 the GC population (whether or not this is split in red and blue populations) 
-show the signature at around $R\sim10â€™$ of a kinematical transition from a low 
+show the signature at around $R\sim10$ arcmin of a kinematical transition from a low 
 $v_{\rm rms}$ regime to a higher one, with the former being consistent with the 
 central velocity dispersion of NGC 1399 (the central cluster galaxy) and the 
 latter being consistent with the velocity dispersion of the cluster galaxies. 
-This demonstrates that at $R>10â€™$ both GC populations feel strongly the cluster 
+This demonstrates that at $R>10$ arcmin both GC populations feel strongly the cluster 
 potential, rather than the more fable galaxy potential. These kinematical 
 evidences corroborate the photometric evidence found in the deep galaxy 
 photometry of a transition radius between the bright central galaxy and the 
@@ -111,7 +111,7 @@ galaxies:star clusters -- galaxies:evolution-- galaxies: kinematics and dynamics
 
 Nearby galaxy clusters are ideal laboratories for studying the evolution of 
 low- and high mass galaxies as well as dense stellar systems (globular 
-clusters, compact dwarf galaxies, etc.) in dense environments. The Virgo and 
+clusters, compact dwarf galaxies, planetary nebulae, etc.) in dense environments. The Virgo and 
 Fornax clusters are closest galaxy clusters, hence providing privileged targets 
 where detailed observations of the galaxy and small stellar system content can 
 be performed, and galaxy formation theories can be tested. 
@@ -161,7 +161,7 @@ backed up by the complex distribution of globular clusters in the Fornax
 cluster \citep{DAbrusco16,cantiello+17}.
 
 To kinematically map the complexity of the cluster core out to at least 200 kpc 
-using discrete kinematical tracers (e.g. GCs and UCDs) and finally connect the 
+using discrete kinematical tracers (e.g. GCs, UCDs and PNe) and finally connect the 
 large scale kinematics down to the scale of the dwarf galaxies, we have started 
 a multi-instrument observational effort called the Fornax Cluster VLT 
 Spectroscopic Survey (FVSS). As a part of this effort we have acquired integral 
@@ -177,7 +177,7 @@ complementary to archival spectroscopic GC datasets on a more limited area:
 \citet{Schuberth} (which incorporates the catalogue of \citealt{Dirsch04}), 
 \citet{Bergond07} and other catalogues discussed throughout the 
 text). The novelty of the sample discussed in this paper is the uniform coverage 
-of the central 1 deg$^2$ of the Fornax core which will allow us to provide a 
+of the central 1 deg$^2$ of the Fornax core which allows us to provide a 
 spatially complete map of the kinematics of the galaxies in the field out to 
 the regions where they meet the intracluster field (see e.g., \citealt{napolitano03}
 ; \citealt{arnaboldi12}). Here, dynamical times are longer than the central 
@@ -359,7 +359,7 @@ PI: M. Capaccioli), from October 2014 to January 2015.
 The VIMOS spectrograph was equipped with a filter CG475, which cuts off 
 wavelengths bluer than 4750 \AA\ , and a MR grating with a spectral resolution 
 $R = 580$ (or 12.0 \AA\ FWHM) 
-and a dispersion of $2.5$ \AA /~pix. All slits had a width of 1 arcsec. The 
+and a dispersion of $2.5$ \AA\/~pix. All slits had a width of 1 arcsec. The 
 pixel scale in the spatial direction was 0.205 arcsec/pix. This setup allows us 
 to explore the spectral window ranging from $4800$ to $10000$~\AA. Sky 
 transparency was set to clear.
@@ -479,7 +479,7 @@ that we are able to measure the radial velocities of unresolved objects between
 $-500 \kms$ and $+3000\kms$, which include both Galactic stars and Fornax 
 objects.   
 
-During the fxc{\it fxcor}or run, and prior to the correlation with the template 
+During the {\it fxcor} run, and prior to the correlation with the template 
 spectra, the Fourier-transformed scientific spectra were filtered with a ramp 
 filter. The filter was set up to cut off noisy high frequencies as well as low 
 frequencies which may result from poor continuum fitting. The continuum was 
@@ -610,7 +610,7 @@ not yet confirmed in previous studies, while still observing a few tens of known
 our velocity measurements against literature studies. The small recovery fraction we have 
 obtained ($\sim 17\%$) is due to a number of factors: contamination
 from stars and background galaxies in the fainter end of the GC 
-luminosities, low S/N objects due to their poor spectral quality (see Figure \ref{tdr}),
+luminosities, low S/N objects due to their poor spectral quality (see Figure \ref{fig:tdr}),
 and observation at large galactocentric radii where the GC density is 
 below 1 GC$/$ arcmin$^2$ (see Figure 15 in \citealt{Schuberth} ). 
 
@@ -725,7 +725,7 @@ by author.}
 We classified all Fornax objects based on their morphology: namely GCs, ultra 
 compact dwarfs (UCDs) and background galaxies. The spatial resolution of 
 VST/OmegaCam is insufficient to resolve the typical half-light radii of GCs 
-with $r_h < 10$ pc \citep{Masters, Puzia11}. Although the size of UCDs with 
+with $r_h < 10$ pc \citep{Masters, Puzia14}. Although the size of UCDs with 
 $r_h > 20$ pc can be resolved using our imaging data \citep{Cantiello15}, 
 measuring UCD sizes is not the focus of this paper and will be deferred to a 
 future work.
@@ -840,7 +840,7 @@ might also contain some GCs belonging to NGC~1379 and NGC~1381 (see Figure
 distribution of the labelled objects in a $(g-i)$ vs. $(g-r)$ space (left 
 panel) and $(g-i)$ vs $i$ space (right panel). Each diagram includes also a 
 radial velocity $v$ axis to show the separation of GCs/UCDs from stars and 
-galaxies. The objects labelled as 'all' represent all sources targeted for 
+galaxies. The objects labelled as `all' represent all sources targeted for 
 spectroscopic follow-up and not the photometric master catalogue.}
 \label{fig:cc}
 \end{figure*}
@@ -868,7 +868,7 @@ filters, but velocity information clearly separates GCs/UCDs from Galactic
 stars and background galaxies. This is also shown in Figure \ref{fig:cc} 
 (left-bottom panel with $(g-i)$ vs .$v$) which shows how the velocity 
 dispersion of blue GCs with $(g-i) \le 0.85$ is higher than that of the red GCs, a 
-property shared with GC systems in the most giant galaxies \citep[][e.g.,]{Pota13}. 
+property shared with GC systems in the most giant galaxies \citep[e.g.,][]{Pota13}. 
 The rightmost panel, with $v$ vs $i$, shows that 
 the velocity distribution of all GCs is skewed towards lower velocities (a 
 property also visible in Figure \ref{fig:phase-space}). This effect was already 
@@ -936,10 +936,10 @@ in particular NGC 1404, NGC 1387, are likely to contaminate the
 kinematics of the central galaxies. However, looking at the $v_{\rm rms}$ 
 profile of the total sample (shaded gray area) there is a steep rise in the 
 profile around $R\sim10$ arcmin which marks a kinematical transition from a 
-``colder'' kinematical region ($\sim 50 kpc$) to a ``warmer'' one. In the 
+``colder'' kinematical region ($\sim 50$ Kpc) to a ``warmer'' one. In the 
 outermost region, the $v_{\rm rms}$ profile flattens out to a value which is 
 fairly consistent with the kinematics of the cluster galaxies (the green data 
-point at $R\sim35â€™$ from \citealt{Drinkwater00}). This suggests that the GC 
+point at $R\sim35$ arcmin from \citealt{Drinkwater00}). This suggests that the GC 
 kinematics at radii larger than 10 arcmin is ruled by the cluster potential. 
 This feature demonstrates kinematically that the photometric transition radius 
 between the bright central galaxy and the outer exponential halo at $R\sim10$ 
@@ -987,7 +987,7 @@ central velocity dispersion of the galaxy). If so, then the dilution can be as
 large as 10-15$\%$, which is enough to explain the saddle in the  $v_{\rm rms}$ 
 profile in the radius range $15<R<28$ arcmin corresponding to the bins 
 overlapping with NGC~1387, NGC~1389, NGC~1381 and NGC~1379, while a similar 
-correction for NGC~1404 at $R\sim10'$ would increase the intrinsic $v_{\rm 
+correction for NGC~1404 at $R\sim10$ arcmin would increase the intrinsic $v_{\rm 
 rms}$ to $\sim400$ km s $^{-1}$, i.e. consistently with the peak value at 
 $R\sim 12$ arcmin.
 
@@ -1036,11 +1036,11 @@ We have used the new complete catalog of GCs to derive the total  $v_{\rm rms}$
 of the GC sample and also broken the sample in the red and blue subsamples using
 $(g - i) = 0.85$.
 We have demonstrated that all profiles show a similar signature at around 
-$R\sim10â€™$ of a kinematical transition from a low $v_{\rm rms}$ regime to a 
+$R\sim10$ arcmin of a kinematical transition from a low $v_{\rm rms}$ regime to a 
 higher one, with the former being consistent with the central velocity 
 dispersion of NGC 1399 (the central cluster galaxy) and the latter being 
 consistent with the velocity dispersion of the cluster galaxies. This 
-demonstrates that at $R>10â€™$ both the GC populations feel strongly the cluster 
+demonstrates that at $R>10$ arcmin both the GC populations feel strongly the cluster 
 potential, rather than the more fable galaxy potential. Parallel to this paper 
 we also performed a similar analysis where we present similar evidence based on 
 kinematical distribution ot planetary nebulae (PNe) in the core of the cluster, 
